--- a/lib/test/diff/fixtures/sidediff-full-char.html
+++ b/lib/test/diff/fixtures/sidediff-full-char.html
@@ -1,10 +1,10 @@
 <tr class="diffheader"><td colspan="2">Lines:&nbsp;1-21</td><td colspan="2">Lines:&nbsp;1-27</td></tr><tr class='diffbody'><td>&nbsp;</td><td>!Congratulations</td><td>&nbsp;</td><td>!Congratulations</td></tr>
-<tr><td class="diffdeleted">-</td><td class="diffdeleted">This is the default homepage for your Tiki. If you are seeing this page, your installation was successful.</td>
-<td class="diffadded">+</td><td class="diffadded">This is the default homepage for your Tiki<ins class="diffchar inserted"><strong>. Changes Inline</strong></ins>. If you are seeing this page, your installation was successful.</td></tr>
+<tr><td class="diffdeleted diffprefix">-</td><td class="diffdeleted diffcontent">This is the default homepage for your Tiki. If you are seeing this page, your installation was successful.</td>
+<td class="diffadded diffprefix">+</td><td class="diffadded diffcontent">This is the default homepage for your Tiki<ins class="diffchar inserted"><strong>. Changes Inline</strong></ins>. If you are seeing this page, your installation was successful.</td></tr>
 <tr class='diffbody'><td>&nbsp;</td><td>You can change this page after logging in. Please review the [http://doc.tiki.org/Wiki-syntax|wiki syntax] for editing details.</td><td>&nbsp;</td><td>You can change this page after logging in. Please review the [http://doc.tiki.org/Wiki-syntax|wiki syntax] for editing details.</td></tr>
-<tr><td colspan='2'>&nbsp;</td><td class='diffadded'>+</td><td class='diffadded'>Some changes</td></tr>
-<tr><td colspan='2'>&nbsp;</td><td class='diffadded'>+</td><td class='diffadded'>More text added</td></tr>
-<tr><td colspan='2'>&nbsp;</td><td class='diffadded'>+</td><td class='diffadded'>And even more</td></tr>
+<tr><td colspan='2'>&nbsp;</td><td class='diffadded diffprefix'>+</td><td class='diffadded diffcontent'>Some changes</td></tr>
+<tr><td colspan='2'>&nbsp;</td><td class='diffadded diffprefix'>+</td><td class='diffadded diffcontent'>More text added</td></tr>
+<tr><td colspan='2'>&nbsp;</td><td class='diffadded diffprefix'>+</td><td class='diffadded diffcontent'>And even more</td></tr>
 <tr class='diffbody'><td>&nbsp;</td><td>!!Get started.</td><td>&nbsp;</td><td>!!Get started.</td></tr>
 <tr class='diffbody'><td>&nbsp;</td><td>To begin configuring your site:</td><td>&nbsp;</td><td>To begin configuring your site:</td></tr>
 <tr class='diffbody'><td>&nbsp;</td><td>{FANCYLIST()}</td><td>&nbsp;</td><td>{FANCYLIST()}</td></tr>
@@ -12,7 +12,7 @@
 <tr class='diffbody'><td>&nbsp;</td><td>2) Manually [tiki-admin.php?page=features|Enable specific Tiki features] that you didn’t enable with the Admin wizard.</td><td>&nbsp;</td><td>2) Manually [tiki-admin.php?page=features|Enable specific Tiki features] that you didn’t enable with the Admin wizard.</td></tr>
 <tr class='diffbody'><td>&nbsp;</td><td>3) Run [tiki-admin.php?page=profiles|Tiki Profiles] to quickly get up and running.</td><td>&nbsp;</td><td>3) Run [tiki-admin.php?page=profiles|Tiki Profiles] to quickly get up and running.</td></tr>
 <tr class='diffbody'><td>&nbsp;</td><td>{FANCYLIST}</td><td>&nbsp;</td><td>{FANCYLIST}</td></tr>
-<tr><td colspan='2'>&nbsp;</td><td class='diffadded'>+</td><td class='diffadded'>More changes here [http://www.tiki.org]</td></tr>
+<tr><td colspan='2'>&nbsp;</td><td class='diffadded diffprefix'>+</td><td class='diffadded diffcontent'>More changes here [http://www.tiki.org]</td></tr>
 <tr class='diffbody'><td>&nbsp;</td><td>!!Need help?</td><td>&nbsp;</td><td>!!Need help?</td></tr>
 <tr class='diffbody'><td>&nbsp;</td><td>For more information:</td><td>&nbsp;</td><td>For more information:</td></tr>
 <tr class='diffbody'><td>&nbsp;</td><td>*[https://tiki.org/Introduction|Learn more about Tiki].</td><td>&nbsp;</td><td>*[https://tiki.org/Introduction|Learn more about Tiki].</td></tr>
